xx1219: avoid using set.of and map.of to be compatible with low jdk version